[tool.poetry]
name = "tracertc"
version = "0.1.0"
description = "Reverse traceroute using WebRTC"
authors = ["Mark Steward <marksteward@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiortc = "^0.9.27"
aiohttp = "^3.6.2"
aioice = {git = "https://github.com/marksteward/aioice"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
